<resources>
    <string name="app_name">InventoryTracking</string>
    <!-- Strings used for fragments for navigation -->
    <string name="inventory_fragment_label">Inventory</string>
    <string name="add_item_fragment_label">Add item</string>
    <string name="total_value">Total value</string>
    <string name="name">Name</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="add_item">Add Item</string>
    <string name="delete_item">Delete Item</string>
    <string name="update_item">Update Item</string>
    <string name="total_value_label">Total value:</string>
</resources>